@@ -1,4 +1,6 @@
 ver 0.22.5 (not yet released)
+* database
+  - simple: fix missing CUE sheet metadata in "addid" command
 * tags
   - id: translate TPE3 to Conductor, not Performer
 * archive
